expected/main/core/structs/structs-init-default13.err
ERROR: "actual/main/core/structs/structs-init-default13.lc", line 9
area s <- initStored 0 :: Ref S
          ^
Type mismatch: cannot unify "Stored ?5" with "S"

